# ComfyUI-SCAIL-Pose2

./: .comfyignore  .gitignore  .pre-commit-config.yaml  nodes.py  nodes_sam3_preprocessing.py  nodes_scail2_condition.py  nodes_scail2_pose_alignment.py  nodes_scail2_reference_alignment.py  nodes_scail2_replacement_condition_video.py  nodes_scail2_replacement_mask.py  nodes_wanvideo_adapter.py  nodes_wanvideo_scail2_adapter.py  pyproject.toml  readme.md  requirements.txt
NLFPoseExtract/: align3d.py  nlf_render.py
nlf_model/: backbone.py  model.py  multiperson.py
pose_draw/: draw_3d_utils.py  draw_pose_utils.py  draw_utils.py
render_3d/: export_utils.py  render_torch.py  taichi_cylinder.py
scail2/: __init__.py  colored_masks.py  condition.py  generation_policy.py  geometry.py  identity.py  masks.py  nlf_geometry.py  observability.py  pose_alignment.py  preprocessing.py  reference_alignment.py  replacement_condition_video.py  replacement_diagnostics.py  replacement_mask.py  replacement_presets.py  replacement_preview.py  sam3_preprocessing.py  wananimate_fallback.py  wanvideo_adapter.py  wanvideo_contracts.py  wanvideo_scail2_adapter.py  workflow_static.py
scripts/: benchmark_replacement_mask.py  check_detect_secrets.py  check_supply_chain.py  compile_python_files.py  run_full_tests_linux.sh  run_full_tests_windows.ps1
tests/: E2E_TESTING_NOTICE.md  E2E_TESTING_SOP.md  TEST_SOP.md  test_direct_generation_policy.py  test_governance_baseline.py  test_packaging_public_docs.py  test_release_closeout.py  test_replacement_preview_contract.py  test_scail2_geometry.py  (+16 more)
(+7 files in other folders)
