[project]
name = "comfyui-scail-pose2"
description = "ComfyUI SCAIL/SCAIL-2 pose preprocessing and WanVideoWrapper adapter nodes."
version = "1.0.0"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "rookiestar28" }]
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.25.0",
  "opencv-python",
  "pillow",
  "safetensors>=0.4.2",
  "scipy",
  "tqdm",
]
keywords = ["comfyui", "scail", "scail-2", "pose", "wanvideo"]
classifiers = [
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/rookiestar28/ComfyUI-SCAIL-Pose2"

[tool.comfy]
PublisherId = "rookiestar"
DisplayName = "ComfyUI-SCAIL-Pose2"
Icon = ""
